@@ -23,6 +23,7 @@ ENH: Ticket#709 - Added TDbCache.ConnectionID (Qiang)
 ENH: Added THead requirement check (Qiang)
 ENH: Added TOutputCache.CacheTime (Qiang)
 ENH: Added "remember login" support to TAuthManager and the related modules/classes (Qiang)
+ENH: Added prompt text support to TDropDownList and TListBox (Qiang)
 CHG: Ticket#685 - Slashes and backslashes mixup in PradoBase (Qiang)
 CHG: Ticket#705 - TImage will not set border style by default (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
